--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,10 +27,13 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: |
+          echo Hello, world!
+          echo "HELLO=WORLD123" >> $GITHUB_ENV
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          echo "The value of HELLO is $HELLO"
